--- a/css/404.css
+++ b/css/404.css
@@ -241,7 +241,7 @@ a:focus {
 }
 
 .kenburns {
-    background: url("../img/slide3.jpeg") center;
+    background: url("../img/slide3.jpg") center;
     background-size: cover;
     width: 100vw;
     height: 100vh;
