--- a/about/css/style.css
+++ b/about/css/style.css
@@ -7317,9 +7317,10 @@ h1, h2, h3, h4, h5,
       padding: 15px 0; } }
   @media (max-width: 991.98px) {
     .ftco-navbar-light {
-      background: #000 !important;
+      background: #0c0c0c !important;
       position: relative;
-      top: 0; } }
+      top: 0;
+      } }
   .ftco-navbar-light .navbar-brand {
     color: #fff;
     font-weight: 400; }
