--- a/css/style.css
+++ b/css/style.css
@@ -7317,9 +7317,10 @@ h1, h2, h3, h4, h5,
       padding: 15px 0; } }
   @media (max-width: 991.98px) {
     .ftco-navbar-light {
-      background: #000 !important;
+      background: #000000 !important;
       position: relative;
-      top: 0; } }
+      top: 0;
+      } }
   .ftco-navbar-light .navbar-brand {
     color: #fff;
     font-weight: 400; }
@@ -7400,12 +7401,13 @@ h1, h2, h3, h4, h5,
     color: rgba(255, 255, 255, 0.5); }
   .ftco-navbar-light .navbar-toggler {
     border: none;
-    color: rgba(255, 255, 255, 0.5) !important;
+    color: rgb(250 250 250 / 50%) !important;
     cursor: pointer;
     padding-right: 0;
     text-transform: uppercase;
     font-size: 16px;
-    letter-spacing: .1em; }
+    letter-spacing: .1em;
+    }
   .ftco-navbar-light.scrolled {
     position: fixed;
     right: 0;
