--- a/css/style.css
+++ b/css/style.css
@@ -7421,7 +7421,7 @@ h1, h2, h3, h4, h5,
       color: #2f89fc !important; }
     .ftco-navbar-light.scrolled .nav-item.cta > a {
       color: #fff !important;
-      background: #2f89fc;
+      background: #2473ac;
       border: none !important;
       padding-top: 0.5rem !important;
       padding-bottom: .5rem !important;
@@ -7431,7 +7431,8 @@ h1, h2, h3, h4, h5,
       -webkit-border-radius: 30px;
       -moz-border-radius: 30px;
       -ms-border-radius: 30px;
-      border-radius: 30px; }
+      border-radius: 30px;
+      }
       @media (max-width: 991.98px) {
         .ftco-navbar-light.scrolled .nav-item.cta > a {
           -webkit-border-radius: 4px;
@@ -7726,9 +7727,11 @@ h1, h2, h3, h4, h5,
       .ftco-intro .container {
         margin-top: -100px; } }
   .ftco-intro .color-1 {
-    background: #2cbcbc; }
+    background: #e5782e;
+    }
   .ftco-intro .color-2 {
-    background: #21aac4; }
+    background: #2d8940;
+    }
   .ftco-intro .color-3 {
     background: #2f89fc;
     background: -moz-linear-gradient(-45deg, #2f89fc 0%, #2cbcbc 100%);
@@ -7842,7 +7845,7 @@ h1, h2, h3, h4, h5,
   width: 100%;
   padding: 30px;
   color: rgba(255, 255, 255, 0.7);
-  background: #2f89fc;
+  background: #2473ac;
   background: -moz-linear-gradient(-45deg, #2f89fc 0%, #2cbcbc 100%);
   background: -webkit-gradient(left top, right bottom, color-stop(0%, #2f89fc), color-stop(100%, #2cbcbc));
   background: -webkit-linear-gradient(-45deg, #2f89fc 0%, #2cbcbc 100%);
@@ -7850,8 +7853,9 @@ h1, h2, h3, h4, h5,
   background: -ms-linear-gradient(-45deg, #2f89fc 0%, #2cbcbc 100%);
   background: -webkit-linear-gradient(315deg, #2f89fc 0%, #2cbcbc 100%);
   background: -o-linear-gradient(315deg, #2f89fc 0%, #2cbcbc 100%);
-  background: linear-gradient(135deg, #2f89fc 0%, #2cbcbc 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#2f89fc', endColorstr='#00dc94', GradientType=1 ); }
+  background: linear-gradient(135deg, #2473ac 0%, #2473ac 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#2f89fc', endColorstr='#00dc94', GradientType=1 );
+  }
   @media (min-width: 768px) {
     .about-wrap {
       padding: 7% 25% 5% 10%; } }
