--- a/css/style.css
+++ b/css/style.css
@@ -66,9 +66,10 @@ body {
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
-  color: #212529;
+  color: #f3f3f3;
   text-align: left;
-  background-color: #fff; }
+  background-color: #fff;
+  }
 
 [tabindex="-1"]:focus {
   outline: 0 !important; }
@@ -3563,7 +3564,8 @@ input[type="button"].btn-block {
     color: #fff; }
 
 .navbar-dark .navbar-nav .nav-link {
-  color: rgba(255, 255, 255, 0.5); }
+  color: rgb(255 255 255 / 50%);
+  }
   .navbar-dark .navbar-nav .nav-link:hover, .navbar-dark .navbar-nav .nav-link:focus {
     color: rgba(255, 255, 255, 0.75); }
   .navbar-dark .navbar-nav .nav-link.disabled {
@@ -7317,7 +7319,7 @@ h1, h2, h3, h4, h5,
       padding: 15px 0; } }
   @media (max-width: 991.98px) {
     .ftco-navbar-light {
-      background: #000000 !important;
+      background: #f3f3f3 !important;
       position: relative;
       top: 0;
       } }
@@ -7339,8 +7341,9 @@ h1, h2, h3, h4, h5,
     padding-left: 20px;
     padding-right: 20px;
     font-weight: 400;
-    color: #fff;
-    opacity: 1 !important; }
+    color: #000;
+    opacity: 1 !important;
+    }
     @media (min-width: 992px) {
       .ftco-navbar-light .navbar-nav > .nav-item > .nav-link {
         color: #fff; } }
@@ -7401,7 +7404,7 @@ h1, h2, h3, h4, h5,
     color: rgba(255, 255, 255, 0.5); }
   .ftco-navbar-light .navbar-toggler {
     border: none;
-    color: rgb(250 250 250 / 50%) !important;
+    color: rgb(0 0 0 / 50%) !important;
     cursor: pointer;
     padding-right: 0;
     text-transform: uppercase;
