--- a/css/style.css
+++ b/css/style.css
@@ -9782,7 +9782,7 @@ h5,
 }
 .form-control {
     height: 52px !important;
-    background: #fff !important;
+    background: #d5dfd7 !important;
     color: #000 !important;
     font-size: 16px;
     border-radius: 0px;
